--- a/app/src/main/res/layout/activity_create_recorded_lesson.xml
+++ b/app/src/main/res/layout/activity_create_recorded_lesson.xml
@@ -231,7 +231,7 @@
             <TextView
                 android:id="@+id/live_lesson_label"
                 style="@style/LiveLessonRightEntrance"
-                android:hint="@string/live_lesson_label_hint" />
+                android:hint="@string/please_input" />
 
         </LinearLayout>
 
