--- a/app/src/main/res/layout/item_recorded_lesson_lesson.xml
+++ b/app/src/main/res/layout/item_recorded_lesson_lesson.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/px90"
+    android:layout_height="wrap_content"
+    android:paddingTop="@dimen/px30"
+    android:paddingBottom="@dimen/px30"
     android:background="@drawable/line_bottom_gray_has_milk_bg"
     >
 
@@ -25,12 +27,12 @@
         android:textSize="@dimen/font_32px"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/px64"
+        android:layout_marginRight="@dimen/px26"
         android:layout_gravity="center_vertical"
         android:text="目录名"
         android:textColor="@color/font_black"
         android:drawableLeft="@drawable/ic_recorded_lesson"
         android:drawablePadding="@dimen/px16"
-        android:maxLines="1"
         />
 
     <TextView
