--- a/app/src/main/res/layout/activity_select_belong_to_dir.xml
+++ b/app/src/main/res/layout/activity_select_belong_to_dir.xml
@@ -2,5 +2,6 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listview"
     android:orientation="vertical"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
