--- a/app/src/main/res/layout/layout_recordlesson_detail_header.xml
+++ b/app/src/main/res/layout/layout_recordlesson_detail_header.xml
@@ -185,6 +185,8 @@
                 android:minLines="3"
                 android:layout_below="@id/linfo"
                 android:layout_marginTop="@dimen/px20"
+                android:lineSpacingExtra="@dimen/px20"
+                android:lineSpacingMultiplier="1"
                 />
 
 
