调起白板协作

--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -29,6 +29,14 @@
 
     </FrameLayout>
 
+    <!--白板协作-->
+    <FrameLayout
+        android:id="@+id/board_collaborate_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
     <!--文档管理-->
     <FrameLayout
             android:id="@+id/document_layout"
