Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/layout_classroom2_chat_received.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_received.xml
@@ -16,6 +16,7 @@
             android:textColor="@color/font_white"
             android:background="@drawable/chat_item_timeline_bg_rect"
             android:padding="@dimen/px4"
+            android:layout_marginTop="@dimen/px20"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:maxLines="1"
@@ -64,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_30px"
-            android:textColor="@color/font_gray"
+            android:textColor="@color/font_black"
             android:layout_marginTop="@dimen/px10"
             android:layout_marginLeft="@dimen/px4"
             android:layout_marginRight="@dimen/chat_item_content_rl"
