--- a/app/src/main/res/layout/activity_classroom2.xml
+++ b/app/src/main/res/layout/activity_classroom2.xml
@@ -20,7 +20,7 @@
             android:id="@+id/bottom_lay"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/light_gray"
+            android:background="@color/chat_gray"
             app:layout_constraintTop_toBottomOf="@id/replace_lay"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
