--- a/app/src/main/res/layout/fragment_classroom2_database.xml
+++ b/app/src/main/res/layout/fragment_classroom2_database.xml
@@ -51,6 +51,7 @@
         </RadioGroup>
 
         <ImageView
+                android:id="@+id/download_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:src="@drawable/ic_class_database_mydownload_1"
@@ -61,6 +62,7 @@
                 />
 
         <ImageView
+                android:id="@+id/add_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:src="@drawable/ic_class_add_1"
