--- a/app/src/main/res/layout/fragment_classroom2_databaselist.xml
+++ b/app/src/main/res/layout/fragment_classroom2_databaselist.xml
@@ -4,14 +4,58 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
-
-    <TextView
-            android:id="@+id/title"
+    <ImageView
+            android:id="@+id/sort_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="@dimen/px80"
+            android:src="@drawable/ic_class_database_download_sort"
+            android:layout_marginRight="@dimen/px34"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+    <ImageView
+            android:id="@+id/filter_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/px80"
+            android:src="@drawable/ic_class_database_classification_1"
+            android:layout_marginRight="@dimen/px48"
+            app:layout_constraintRight_toLeftOf="@id/sort_btn"
+            />
+    <TextView
+            android:id="@+id/bottom_input"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/px60"
+            android:paddingLeft="@dimen/px7"
+            android:hint="搜索"
+            android:textSize="@dimen/font_26px"
+            android:textColorHint="@color/hint_color"
+            android:gravity="left|center_vertical"
+            android:background="@drawable/bg_rectrangle_rect"
+            android:layout_marginLeft="@dimen/px27"
+            android:layout_marginRight="@dimen/px27"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toLeftOf="@id/filter_btn"
+            app:layout_constraintTop_toTopOf="@id/filter_btn"
+            app:layout_constraintBottom_toBottomOf="@id/filter_btn"
+            />
+
+
+    <View
+            android:id="@+id/search_bottom_line"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/px1"
+            android:background="@color/gray_line"
+            app:layout_constraintTop_toBottomOf="@id/filter_btn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+    <cn.xiaojs.xma.ui.classroom2.widget.LoadmoreRecyclerView
+            android:id="@+id/rlist"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/search_bottom_line"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
