--- a/app/src/main/res/layout/fragment_classroom2_living.xml
+++ b/app/src/main/res/layout/fragment_classroom2_living.xml
@@ -8,6 +8,16 @@
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
 
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/chat_list"
+            android:layout_width="@dimen/px300"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:layout_marginTop="@dimen/px281"
+            android:layout_marginBottom="@dimen/px124"
+            android:layout_marginLeft="@dimen/px30"
+            />
+
 
     <include
             android:id="@+id/bottom_bar"
