--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -174,5 +174,8 @@
     <color name="hint_color">#979797</color>
     <color name="stork_color">#D0D0D0</color>
     <color name="timeline_color">#CACACA</color>
+    <color name="chat_gray">#EEEEEE</color>
+    <color name="chat_name">#979797</color>
+    <color name="chat_name_blue">#96D0F6</color>
 
 </resources>
