--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -201,4 +201,17 @@
         <item>重命名</item>
         <item>移动到</item>
     </string-array>
+    <string-array name="material_filters">
+        <item>全部</item>
+        <item>图片</item>
+        <item>PPT</item>
+        <item>PDF</item>
+        <item>Word</item>
+        <item>视频</item>
+        <item>文件夹</item>
+    </string-array>
+    <string-array name="material_sorts">
+        <item>按文件名称排序</item>
+        <item>按时间倒序排序</item>
+    </string-array>
 </resources>
