--- a/app/src/main/res/layout/layout_classroom2_material_item.xml
+++ b/app/src/main/res/layout/layout_classroom2_material_item.xml
@@ -2,8 +2,10 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/root_lay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
         >
 
     <ImageView
