--- a/app/src/main/res/layout/fragment_classroom2_memberlist.xml
+++ b/app/src/main/res/layout/fragment_classroom2_memberlist.xml
@@ -27,6 +27,7 @@
                 app:layout_constraintRight_toRightOf="parent"/>
 
         <ImageView
+                android:id="@+id/add_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:src="@drawable/ic_class_add_1"
