--- a/app/src/main/res/layout/activity_classroom2.xml
+++ b/app/src/main/res/layout/activity_classroom2.xml
@@ -10,7 +10,7 @@
             android:id="@+id/replace_lay"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/black"
+            android:background="@color/white"
             app:layout_constraintDimensionRatio="16:9"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
