--- a/app/src/main/res/layout/fragment_classroom2_idle.xml
+++ b/app/src/main/res/layout/fragment_classroom2_idle.xml
@@ -12,8 +12,11 @@
             android:text="Idle status"/>
 
     <include
-            android:id="@+id/bottom_bar"
-            layout="@layout/layout_classroom2_idle_control"
+            layout="@layout/layout_classroom2_control_port"
+            />
+
+    <include
+            layout="@layout/layout_classroom2_control_land"
             />
 
 </RelativeLayout>
