--- a/app/src/main/res/layout/layout_classroom2_control_port.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_port.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:id="@+id/control_port"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
         >
@@ -40,7 +41,7 @@
 
     <!-- top -->
     <ImageView
-            android:id="@+id/top_back"
+            android:id="@+id/p_top_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_class_back"
@@ -48,87 +49,64 @@
             app:layout_constraintTop_toTopOf="@id/top_guideline"
             />
 
-    <TextView
-            android:id="@+id/top_roominfo"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:textColor="@color/font_white"
-            android:textSize="@dimen/font_22px"
-            android:gravity="center"
-            android:paddingLeft="@dimen/px92"
-            android:paddingRight="@dimen/px24"
-            android:background="@drawable/bg_start_live_rect"
-            app:layout_constraintLeft_toLeftOf="@+id/top_photo"
-            app:layout_constraintTop_toTopOf="@id/top_guideline"
-            app:layout_constraintBottom_toBottomOf="@+id/top_photo"/>
-
     <ImageView
-            android:id="@+id/top_photo"
-            android:layout_width="@dimen/px68"
-            android:layout_height="@dimen/px68"
-            android:background="@drawable/default_avatar"
-            android:layout_marginLeft="@dimen/px24"
-            app:layout_constraintTop_toTopOf="@id/top_guideline"
-            app:layout_constraintLeft_toRightOf="@id/top_back"
-            />
-
-    <ImageView
-            android:id="@+id/top_switchcamera"
+            android:id="@+id/p_top_more"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:src="@drawable/ic_class_cameraswitching"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_class_menu"
             app:layout_constraintRight_toRightOf="@id/right_guideline"
             app:layout_constraintTop_toTopOf="@id/top_guideline"
-            app:layout_constraintBottom_toBottomOf="@id/top_back"
             />
 
     <TextView
-            android:id="@+id/top_start_or_stop_living"
+            android:id="@+id/p_top_live"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:text="停止直播"
+            android:text="@string/start_live"
             android:textColor="@color/font_white"
             android:textSize="@dimen/font_22px"
             android:gravity="center"
             android:padding="@dimen/px20"
-            android:background="@drawable/bg_start_live_rect"
             android:layout_marginRight="@dimen/px24"
-            app:layout_constraintRight_toLeftOf="@id/top_switchcamera"
+            android:background="@drawable/bg_start_live_rect"
+            app:layout_constraintRight_toLeftOf="@id/p_top_more"
             app:layout_constraintTop_toTopOf="@id/top_guideline"
-            app:layout_constraintBottom_toBottomOf="@id/top_back"/>
+            app:layout_constraintBottom_toBottomOf="@id/p_top_more"/>
 
     <!-- bottom -->
-
-    <ImageView
-            android:id="@+id/bottom_chat"
-            android:layout_width="wrap_content"
+    <View
+            android:id="@+id/p_bottom_bg"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/ic_class_chat"
+            android:background="@color/black_opacity_40"
             app:layout_constraintTop_toTopOf="@id/bottom_guideline"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+    <ImageView
+            android:id="@+id/p_bottom_orient"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginRight="@dimen/px18"
+            android:src="@drawable/ic_class_crossscreen"
+            app:layout_constraintTop_toTopOf="@id/bottom_guideline"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+    <TextView
+            android:id="@+id/p_bottom_class_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/font_class_name"
+            android:textSize="@dimen/font_30px"
+            android:layout_marginRight="@dimen/px10"
+            android:layout_marginTop="@dimen/px7"
+            app:layout_constraintTop_toTopOf="@id/bottom_guideline"
+            app:layout_constraintRight_toLeftOf="@id/p_bottom_orient"
             app:layout_constraintLeft_toLeftOf="@id/left_guideline"
             />
-
-    <ImageView
-            android:id="@+id/bottom_more"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:src="@drawable/ic_class_column"
-            app:layout_constraintTop_toTopOf="@id/bottom_guideline"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="@id/right_guideline"
-            />
-
-    <!--left-->
-
-    <!--<ListView-->
-    <!--android:id="@+id/left_talklist"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:visibility="gone"-->
-    <!--/>-->
-
-    <!--right-->
-
 
 </android.support.constraint.ConstraintLayout>
