Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/fragment_classroom2_living.xml
+++ b/app/src/main/res/layout/fragment_classroom2_living.xml
@@ -27,6 +27,9 @@
             layout="@layout/layout_classroom2_control_land"
             />
 
-
+    <include
+            layout="@layout/layout_classroom2_right_slide_panel"
+            android:visibility="gone"
+            />
 
 </RelativeLayout>
