--- a/app/src/main/res/layout/fragment_classroom2_play.xml
+++ b/app/src/main/res/layout/fragment_classroom2_play.xml
@@ -39,6 +39,14 @@
             layout="@layout/layout_classroom2_play_control"
             />
 
+    <include
+            layout="@layout/layout_classroom2_control_land"
+            />
+
+    <include
+            layout="@layout/layout_classroom2_right_slide_panel"
+            android:visibility="gone"
+            />
 
 
 </RelativeLayout>
