--- a/app/src/main/res/layout/layout_classroom2_control_port.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_port.xml
@@ -64,7 +64,7 @@
             android:layout_height="0dp"
             android:text="@string/start_live"
             android:textColor="@color/font_white"
-            android:textSize="@dimen/font_22px"
+            android:textSize="@dimen/font_24px"
             android:gravity="center"
             android:padding="@dimen/px20"
             android:layout_marginRight="@dimen/px24"
@@ -103,10 +103,10 @@
             android:textColor="@color/font_class_name"
             android:textSize="@dimen/font_30px"
             android:layout_marginRight="@dimen/px10"
-            android:layout_marginTop="@dimen/px7"
             app:layout_constraintTop_toTopOf="@id/bottom_guideline"
             app:layout_constraintRight_toLeftOf="@id/p_bottom_orient"
             app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
 </android.support.constraint.ConstraintLayout>
