--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -171,6 +171,7 @@
     <color name="light_gray">#d1d5d8</color>
 
     <color name="green_grass">#33DECC</color>
+    <color name="white_opacity_35">#a6ffffff</color>
     <color name="black_opacity_40">#66000000</color>
     <color name="black_opacity_50">#80000000</color>
     <color name="hint_color">#979797</color>
